Utilizando todas las funciones. Closes #4.

--- a/RegistroUsuarios.csproj
+++ b/RegistroUsuarios.csproj
@@ -30,4 +30,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="GestionUsuario.Db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
